# scripts

./: LICENSE  cat.py  detab.py  fdecomment.py  pyproject.toml  test_detab.py  test_fdecomment.py  test_wc.py  wc.py
testinputs/: comments_and_escapes.f  comments_and_escapes.f90  comments_and_escapes_decommented.f  comments_and_escapes_decommented.f90  fox-tab.txt  learnfortran.f90  learnfortran_decommented.f90
